# src/modules/assignments/assignment.routes.ts
@@ -1,13 +1,15 @@
 
 import { Router } from "express";
-import { createAssignment, getAllAssignments, getMyAssignments, updateStatus, toggleTask } from "./assignment.controller";
+import { createAssignment, getAllAssignments, getMyAssignments, updateStatus, toggleTask, getDataTable } from "./assignment.controller";
 import { authenticate } from "../common/middlewares/auth.middleware";
 
 const router = Router();
 
 // Admin / Shift Guard Routes
 router.post("/", createAssignment); // TODO: Add Role Middleware
+router.post("/datatable", getDataTable);
 router.get("/", getAllAssignments); // TODO: Add Role Middleware
+router.get("/all", getAllAssignments);
 
 // Guard Routes
 router.get("/me", authenticate, getMyAssignments);
