# src/modules/rounds/round.routes.ts
@@ -10,6 +10,7 @@ router.post('/start', roundController.startRound);
 router.put('/:id/end', roundController.endRound);
 router.get('/current', roundController.getCurrentRound);
 // Web Endpoints
+router.post('/datatable', roundController.getDataTable);
 router.get('/', roundController.getRounds);
 router.get('/:id', roundController.getRoundDetail);
 
