# src/modules/schedules/schedule.routes.ts
@@ -1,7 +1,9 @@
 import { Router } from "express";
-import { create, getAll, remove, update } from "./schedule.controller";
+import { create, getAll, remove, update, getDataTable } from "./schedule.controller";
 
 const router = Router();
+
+router.post("/datatable", getDataTable);
 
 router.get("/", getAll);
 router.post("/", create);
